[package]
name = "serial2-tokio"
version = "0.1.13"
description = "cross platform serial ports for tokio based on the serial2 crate"
repository = "https://github.com/de-vri-es/serial2-tokio-rs"
documentation = "https://docs.rs/serial2-tokio"
keywords = ["serial", "serial-port", "COM-port", "RS232", "tty"]
categories = ["hardware-support", "network-programming", "os", "science::robotics", "asynchronous"]
license = "BSD-2-Clause OR Apache-2.0"

publish = ["crates-io"]
edition = "2021"

[features]
# The "unix" feature enables Unix specific extensions.
unix = ["serial2/unix"]

# The "windows" features enables windows specific extensions.
windows = ["serial2/windows"]

# The "rs4xx" feature enables RS-485/RS-422 specific extensions on supported platforms.
rs4xx = ["serial2/rs4xx"]

# Add #[doc(cfg(...))] annotations to platform specific items for better documentation (requires nightly toolchain).
doc-cfg = ["serial2/doc-cfg"]

# Enable limited serde support for serial port configuration.
serde = ["serial2/serde"]

# Add stub implementation of all feature and platform specific items, to allow full documentation to build on all platforms.
doc = ["tokio/io-util", "serial2/doc"]

[dependencies]
serial2 = { git = "https://github.com/Znaw/serial2-rs.git", branch = "main" }
tokio = { version = "1.41.0", default-features = false, features = ["net"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.161"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winerror"] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt", "io-std", "io-util"] }
serial2 = { git = "https://github.com/Znaw/serial2-rs.git", branch = "main", features = ["rs4xx"] }

[package.metadata.docs.rs]
features = ["doc", "doc-cfg"]
